--- a/revolution-exploration_header.html
+++ b/revolution-exploration_header.html
@@ -120,30 +120,8 @@
                                 <!--Left Menu-->
                                 <ul>
                                     <li><a href="page-about-extended.html">Hakkımızda</a></li>
-                                    <li class="dropdown"><a href="#">Hizmetlerimiz</a>
-                                        <ul class="dropdown-menu">
-                                            <li class="#"><a href="#">Topbar</a></li>
-                                            <li class="#"><a href="#">Header</a></li>
-                                            <li class="#"><a href="#">Main Menu<span class="badge bg-danger">NEW</span></a></li>
-                                            <li class="#"><a href="#">Page Title</a></li>
-                                            <li class="#"><a href="#">Page Menu<span class="badge bg-danger">NEW</span></a></li>
-                                            <li class="#"><a href="#">Sidebars</a></li>
-                                            <li class="#"><a href="#">Footers</a></li>
-                                            <li class="#"><a href="#">Options</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="dropdown"><a href="#">Projelerimiz</a>
-                                        <ul class="dropdown-menu">
-                                            <li class="#"><a href="#">Sliders</a></li>
-                                            <li><a href="widgets.html">Widgets</a></li>
-                                            <li><a href="page-loaders.html">Page Loaders<span class="badge bg-danger">NEW</span></a></li>
-                                            <li class="#"><a href="#">Modal Auto Open<span class="badge bg-danger">NEW</span></li>
-                                            <li class="#"><a href="#">Cookie Notify<span class="badge bg-danger">NEW</span></a></li>
-                                            <li><a href="shape-dividers.html">Shape Dividers<span class="badge bg-danger">NEW</span></a></li>
-                                            <li class="#"><a href="#">Menu Labels</a></li>
-                                        </ul>
-                                    </li>
-                                    
+                                    <li><a href="portfolio-page-floating-sidebar.html">Hizmetlerimiz</a></li>
+                                    <li><a href="portfolio-masonry-3-grey-bg.html">Projelerimiz</a></li>
                                 </ul>
                                 <!--Right Menu-->
                                 <ul>
