--- a/page-about-extended.html
+++ b/page-about-extended.html
@@ -221,64 +221,78 @@
         <footer id="footer">
             <div class="footer-content">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-lg-5">
-                            <div class="widget">
-                                <div class="widget-title">Polo HTML5 Template</div>
-                                <p class="mb-5">Built with love in Fort Worth, Texas, USA<br> All rights reserved. Copyright © 2021. INSPIRO.</p>
-                                <a href="https://themeforest.net/item/polo-responsive-multipurpose-html5-template/13708923" class="btn btn-inverted" target="_blank">Purchase Now</a>
-                            </div>
+                    <div class="row gap-y">
+                        <div class="col-md-6 col-xl-4">
+                            <p>
+                                <a href="#"><img src="images/logo.png" alt="logo"></a>
+                            </p>
+                            <p>To design is to discover relationships and to make arrangements and rearrangements among these ingredients.</p>
                         </div>
-                        <div class="col-lg-7">
-                            <div class="row">
-                                <div class="col-lg-3">
-                                    <div class="widget">
-                                        <div class="widget-title">Discover</div>
-                                        <ul class="list">
-                                            <li><a href="#">Features</a></li>
-                                            <li><a href="#">Layouts</a></li>
-                                            <li><a href="#">Corporate</a></li>
-                                            <li><a href="#">Updates</a></li>
-                                            <li><a href="#">Pricing</a></li>
-                                            <li><a href="#">Customers</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <div class="widget">
-                                        <div class="widget-title">Features</div>
-                                        <ul class="list">
-                                            <li><a href="#">Layouts</a></li>
-                                            <li><a href="#">Headers</a></li>
-                                            <li><a href="#">Footers</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <div class="widget">
-                                        <div class="widget-title">Pages</div>
-                                        <ul class="list">
-                                            <li><a href="#">Blog</a></li>
-                                            <li><a href="#">Shop</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <div class="widget">
-                                        <div class="widget-title">Support</div>
-                                        <li><a href="#">Help Desk</a></li>
-                                        <li><a href="#">Documentation</a></li>
-                                        <li><a href="#">Contact Us</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
+                        <div class="col-6 col-md-3 col-xl-2">
+                            <!-- Footer widget area 1 -->
+                            <div class="widget">
+                                <h4>PROJECT</h4>
+                                <ul class="list">
+                                    <li><a href="#">Latest Release</a></li>
+                                    <li><a href="#">Updates</a></li>
+                                    <li><a href="#">License</a></li>
+                                    <li><a href="#">News</a></li>
+                                    <li><a href="#">Links</a></li>
+                                </ul>
                             </div>
+                            <!-- end: Footer widget area 1 -->
+                        </div>
+                        <div class="col-6 col-md-3 col-xl-2">
+                            <!-- Footer widget area 2 -->
+                            <div class="widget">
+                                <h4>SUPPORT</h4>
+                                <ul class="list">
+                                    <li><a href="#">Troubleshooting</a></li>
+                                    <li><a href="#">Common Questions</a></li>
+                                    <li><a href="#">Report a Bug</a></li>
+                                    <li><a href="#">Get Help</a></li>
+                                    <li><a href="#">FAQS</a></li>
+                                </ul>
+                            </div>
+                            <!-- end: Footer widget area 2 -->
+                        </div>
+                        <div class="col-6 col-md-6 col-xl-2">
+                            <!-- Footer widget area 3 -->
+                            <div class="widget">
+                                <h4>COMPANY</h4>
+                                <ul class="list">
+                                    <li><a href="#">About</a></li>
+                                    <li><a href="#">Contact</a></li>
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="#">Blog</a></li>
+                                    <li><a href="#">Portfolio</a></li>
+                                </ul>
+                            </div>
+                            <!-- end: Footer widget area 3 -->
+                        </div>
+                        <div class="col-6 col-md-6 col-xl-2">
+                            <p><a class="btn btn-primary btn-block" href="#">Download Now</a></p>
+                            <br>
+                            <!-- Social icons -->
+                            <h5>FOLLOW US</h5>
+                            <div class="social-icons social-icons-colored social-icons-rounded float-left">
+                                <ul>
+                                    <li class="social-rss"><a href="#"><i class="fa fa-rss"></i></a></li>
+                                    <li class="social-facebook"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                    <li class="social-twitter"><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                    <li class="social-youtube"><a href="#"><i class="fab fa-youtube"></i></a></li>
+                                </ul>
+                            </div>
+                            <!-- end: Social icons -->
                         </div>
                     </div>
                 </div>
-                <div class="copyright-content">
-                    <div class="container">
-                    </div>
+            </div>
+            <div class="copyright-content">
+                <div class="container">
+                    <div class="copyright-text text-center">&copy; 2021 POLO - Responsive Multi-Purpose HTML5 Template. All Rights Reserved.<a href="https://www.inspiro-media.com" target="_blank" rel="noopener">INSPIRO</a> </div>
+                </div>
+            </div>
         </footer>
         <!-- end: Footer -->
         </div>
