--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
                             <nav>
                                 <!--Left Menu-->
                                 <ul>
-                                    <li><a href="page-about-extended.html">Hakkımızda1</a></li>
+                                    <li><a href="page-about-extended.html">Hakkımızda</a></li>
                                     <li><a href="portfolio-page-floating-sidebar.html">Hizmetlerimiz</a></li>
                                     <li><a href="portfolio-masonry-3-grey-bg.html">Projelerimiz</a></li>
                                 </ul>
                                 <!--Right Menu-->
                                <ul>
                                     <li><a href="page-about-extended.html">Haberler</a></li>
-                                    <li class="dropdown"><a href="#">Kariyera</a></li>
-                                    <li class="dropdown"><a href="#">İletişim</a></li>
+                                    <li class="dropdown"><a href="#">Kariyer</a></li>
+                                    <li class="dropdown"><a href="./page-contact-classic.html">İletişim</a></li>
                                 </ul>
                             </nav>
                         </div>
