--- a/page-about-extended.html
+++ b/page-about-extended.html
@@ -15,7 +15,72 @@
 
 <body>
     <div class="body-inner">
-        
+        <header id="header" data-transparent="true" class="dark header-logo-center bg-dark">
+            <div class="header-inner">
+                <div class="container">
+                    <!--Logo-->
+                    <div id="logo">
+                        <a href="index.html">
+                            <span class="logo-default">FAST TURTLES</span>
+                            <span class="logo-dark">FAST TURTLES</span>
+                        </a>
+                    </div>
+                    <!--End: Logo-->
+                    <!-- Search -->
+                    <div id="search"><a id="btn-search-close" class="btn-search-close" aria-label="Close search form"><i class="icon-x"></i></a>
+                        <form class="search-form" action="search-results-page.html" method="get">
+                            <input class="form-control" name="q" type="text" placeholder="Type & Search..." />
+                            <span class="text-muted">Start typing & press "Enter" or "ESC" to close</span>
+                        </form>
+                    </div>
+                    <!-- end: search -->
+                    <!--Header Extras-->
+                    <div class="header-extras">
+                        <ul>
+                            <li>
+                                <a id="btn-search" href="#"> <i class="icon-search"></i></a>
+                            </li>
+                            <li>
+                                <div class="p-dropdown">
+                                    <a href="#"><i class="icon-globe"></i><span>EN</span></a>
+                                    <ul class="p-dropdown-content">
+                                        <li><a href="#">French</a></li>
+                                        <li><a href="#">Spanish</a></li>
+                                        <li><a href="#">English</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--end: Header Extras-->
+                    <!--Navigation Resposnive Trigger-->
+                    <div id="mainMenu-trigger">
+                        <a class="lines-button x"><span class="lines"></span></a>
+                    </div>
+                    <!--end: Navigation Resposnive Trigger-->
+                    <!--Navigation-->
+                    <div id="mainMenu">
+                        <div class="container">
+                            <nav>
+                                <!--Left Menu-->
+                                <ul>
+                                    <li><a href="page-about-extended.html">Hakkımızda</a></li>
+                                    <li><a href="portfolio-page-floating-sidebar.html">Hizmetlerimiz</a></li>
+                                    <li><a href="portfolio-masonry-3-grey-bg.html">Projelerimiz</a></li>
+                                </ul>
+                                <!--Right Menu-->
+                               <ul>
+                                    <li><a href="page-about-extended.html">Haberler</a></li>
+                                    <li class="dropdown"><a href="#">Kariyer</a></li>
+                                    <li class="dropdown"><a href="#">İletişim</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                    <!--end: Navigation-->
+                </div>
+            </div>
+        </header>
         <!-- Inspiro Slider -->
         <div id="slider" class="inspiro-slider dots-creative" data-height-xs="360">
             <!-- Slide 2 -->
@@ -62,7 +127,6 @@
                 </div>
             </div>
         </section>
-
 
         <section class="box-fancy section-fullwidth text-light p-b-0">
             <div class="row">
