--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                 <!--Right Menu-->
                                <ul>
                                     <li><a href="page-about-extended.html">Haberler</a></li>
-                                    <li class="dropdown"><a href="#">Kariyer</a></li>
+                                    <li class="dropdown"><a href="#">Kariyermehmet</a></li>
                                     <li class="dropdown"><a href="#">İletişim</a></li>
                                 </ul>
                             </nav>
