--- a/portfolio-masonry-3-grey-bg.html
+++ b/portfolio-masonry-3-grey-bg.html
@@ -111,8 +111,8 @@
             <div class="container">
                 <nav>
                     <ul>                   
-                        <li><a href="portfolio-masonry-3-shadow-outline.html">Tasarım</a></li>
-                        <li class="active"><a href="portfolio-masonry-3-grey-bg.html">Yazılım</a></li>
+                        <li id="tasarim"><a href="#">Tasarım</a></li>
+                        <li id="yazilim" class="active"><a href="#">Yazılım</a></li>
                     </ul>
                 </nav>
                 <div id="pageMenu-trigger">
@@ -122,14 +122,237 @@
         </div>
         <!-- end: Page Menu -->
         <!-- Content -->
-        <section id="page-content" class="background-grey">
+        <section id="page-content" class="background-grey yazilim-content">
             <div class="container">
+                <h1 style="text-align: center;">YAZILIM</h1>
                 <!-- Portfolio Filter -->
                 <nav class="grid-filter gf-outline" data-layout="#portfolio">
                     <ul>
                         <li class="active"><a href="#" data-category="*">Show All</a></li>
                         <li><a href="#" data-category=".ct-branding">Branding</a></li>
                         <li><a href="#" data-category=".ct-photography">Photography</a></li>
+                        <li><a href="#" data-category=".ct-marketing">Marketing</a></li>
+                        <li><a href="#" data-category=".ct-media">Media</a></li>
+                        <li><a href="#" data-category=".ct-webdesign">Web design</a></li>
+                    </ul>
+                    <div class="grid-active-title">Show All</div>
+                </nav>
+                <!-- end: Portfolio Filter -->
+                <!-- Portfolio -->
+                <div id="portfolio" class="grid-layout portfolio-3-columns" data-margin="20">
+                    <!-- portfolio item -->
+                    <div class="portfolio-item light-bg no-overlay ct-photography ct-media ct-branding ct-Media ct-webdesign">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-slider">
+                                <div class="carousel dots-inside dots-dark arrows-dark" data-items="1" data-loop="true" data-autoplay="true" data-animate-in="fadeIn" data-animate-out="fadeOut" data-autoplay="1500">
+                                    <a href="#"><img src="images/portfolio/64.jpg" alt=""></a>
+                                    <a href="#"><img src="images/portfolio/70.jpg" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="portfolio-description">
+                                <a href="portfolio-page-grid-gallery.html">
+                                    <h3>Towel World</h3>
+                                    <span>Graphics</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+                    <!-- portfolio item -->
+                    <div class="portfolio-item light-bg no-overlay ct-photography ct-media ct-branding ct-Media ct-webdesign">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-slider">
+                                <div class="carousel dots-inside dots-dark arrows-dark" data-items="1" data-loop="true" data-autoplay="true" data-animate-in="fadeIn" data-animate-out="fadeOut" data-autoplay="1500">
+                                    <a href="#"><img src="images/portfolio/64.jpg" alt=""></a>
+                                    <a href="#"><img src="images/portfolio/70.jpg" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="portfolio-description">
+                                <a href="portfolio-page-grid-gallery.html">
+                                    <h3>Towel World</h3>
+                                    <span>Graphics</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+                    <!-- portfolio item -->
+                    <div class="portfolio-item light-bg no-overlay ct-photography ct-media ct-branding ct-Media ct-webdesign">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-slider">
+                                <div class="carousel dots-inside dots-dark arrows-dark" data-items="1" data-loop="true" data-autoplay="true" data-animate-in="fadeIn" data-animate-out="fadeOut" data-autoplay="1500">
+                                    <a href="#"><img src="images/portfolio/64.jpg" alt=""></a>
+                                    <a href="#"><img src="images/portfolio/70.jpg" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="portfolio-description">
+                                <a href="portfolio-page-grid-gallery.html">
+                                    <h3>Towel World</h3>
+                                    <span>Graphics</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+                    <!-- portfolio item -->
+                    <div class="portfolio-item light-bg no-overlay ct-photography ct-media ct-branding ct-Media ct-webdesign">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-slider">
+                                <div class="carousel dots-inside dots-dark arrows-dark" data-items="1" data-loop="true" data-autoplay="true" data-animate-in="fadeIn" data-animate-out="fadeOut" data-autoplay="1500">
+                                    <a href="#"><img src="images/portfolio/64.jpg" alt=""></a>
+                                    <a href="#"><img src="images/portfolio/70.jpg" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="portfolio-description">
+                                <a href="portfolio-page-grid-gallery.html">
+                                    <h3>Towel World</h3>
+                                    <span>Graphics</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+                    <!-- portfolio item -->
+                    <div class="portfolio-item light-bg no-overlay ct-photography ct-media ct-branding ct-Media ct-webdesign">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-slider">
+                                <div class="carousel dots-inside dots-dark arrows-dark" data-items="1" data-loop="true" data-autoplay="true" data-animate-in="fadeIn" data-animate-out="fadeOut" data-autoplay="1500">
+                                    <a href="#"><img src="images/portfolio/64.jpg" alt=""></a>
+                                    <a href="#"><img src="images/portfolio/70.jpg" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="portfolio-description">
+                                <a href="portfolio-page-grid-gallery.html">
+                                    <h3>Towel World</h3>
+                                    <span>Graphics</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+                    <!-- portfolio item -->
+                    <div class="portfolio-item light-bg no-overlay ct-photography ct-media ct-branding ct-Media ct-webdesign">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-slider">
+                                <div class="carousel dots-inside dots-dark arrows-dark" data-items="1" data-loop="true" data-autoplay="true" data-animate-in="fadeIn" data-animate-out="fadeOut" data-autoplay="1500">
+                                    <a href="#"><img src="images/portfolio/64.jpg" alt=""></a>
+                                    <a href="#"><img src="images/portfolio/70.jpg" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="portfolio-description">
+                                <a href="portfolio-page-grid-gallery.html">
+                                    <h3>Towel World</h3>
+                                    <span>Graphics</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+                    <!-- portfolio item -->
+                    <div class="portfolio-item light-bg no-overlay ct-photography ct-media ct-branding ct-Media ct-webdesign">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-slider">
+                                <div class="carousel dots-inside dots-dark arrows-dark" data-items="1" data-loop="true" data-autoplay="true" data-animate-in="fadeIn" data-animate-out="fadeOut" data-autoplay="1500">
+                                    <a href="#"><img src="images/portfolio/64.jpg" alt=""></a>
+                                    <a href="#"><img src="images/portfolio/70.jpg" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="portfolio-description">
+                                <a href="portfolio-page-grid-gallery.html">
+                                    <h3>Towel World</h3>
+                                    <span>Graphics</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+                    <!-- portfolio item -->
+                    <div class="portfolio-item light-bg no-overlay ct-photography ct-media ct-branding ct-Media ct-webdesign">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-slider">
+                                <div class="carousel dots-inside dots-dark arrows-dark" data-items="1" data-loop="true" data-autoplay="true" data-animate-in="fadeIn" data-animate-out="fadeOut" data-autoplay="1500">
+                                    <a href="#"><img src="images/portfolio/64.jpg" alt=""></a>
+                                    <a href="#"><img src="images/portfolio/70.jpg" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="portfolio-description">
+                                <a href="portfolio-page-grid-gallery.html">
+                                    <h3>Towel World</h3>
+                                    <span>Graphics</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+                    <!-- portfolio item -->
+                    <div class="portfolio-item light-bg no-overlay ct-photography ct-media ct-branding ct-Media ct-webdesign">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-slider">
+                                <div class="carousel dots-inside dots-dark arrows-dark" data-items="1" data-loop="true" data-autoplay="true" data-animate-in="fadeIn" data-animate-out="fadeOut" data-autoplay="1500">
+                                    <a href="#"><img src="images/portfolio/64.jpg" alt=""></a>
+                                    <a href="#"><img src="images/portfolio/70.jpg" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="portfolio-description">
+                                <a href="portfolio-page-grid-gallery.html">
+                                    <h3>Towel World</h3>
+                                    <span>Graphics</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+                    <!-- portfolio item -->
+                    <div class="portfolio-item light-bg no-overlay ct-photography ct-media ct-branding ct-Media ct-webdesign">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-slider">
+                                <div class="carousel dots-inside dots-dark arrows-dark" data-items="1" data-loop="true" data-autoplay="true" data-animate-in="fadeIn" data-animate-out="fadeOut" data-autoplay="1500">
+                                    <a href="#"><img src="images/portfolio/64.jpg" alt=""></a>
+                                    <a href="#"><img src="images/portfolio/70.jpg" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="portfolio-description">
+                                <a href="portfolio-page-grid-gallery.html">
+                                    <h3>Towel World</h3>
+                                    <span>Graphics</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+                    <!-- portfolio item -->
+                    <div class="portfolio-item light-bg no-overlay ct-photography ct-media ct-branding ct-Media ct-webdesign">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-slider">
+                                <div class="carousel dots-inside dots-dark arrows-dark" data-items="1" data-loop="true" data-autoplay="true" data-animate-in="fadeIn" data-animate-out="fadeOut" data-autoplay="1500">
+                                    <a href="#"><img src="images/portfolio/64.jpg" alt=""></a>
+                                    <a href="#"><img src="images/portfolio/70.jpg" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="portfolio-description">
+                                <a href="portfolio-page-grid-gallery.html">
+                                    <h3>Towel World</h3>
+                                    <span>Graphics</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+                   
+                </div>
+                <!-- end: Portfolio -->
+            </div>
+        </section>
+        <section id="page-content" class="background-grey tasarim-content">
+            <div class="container">
+                <h1 style="text-align: center;">TASARIM</h1>
+
+                <!-- Portfolio Filter -->
+                <nav class="grid-filter gf-outline" data-layout="#portfolio">
+                    <ul>
+                        <li class="active"><a href="#" data-category="*">Show All</a></li>
+                        <li><a href="#" data-category=".ct-branding">padding</a></li>
+                        <li><a href="#" data-category=".ct-photography">müslüm</a></li>
                         <li><a href="#" data-category=".ct-marketing">Marketing</a></li>
                         <li><a href="#" data-category=".ct-media">Media</a></li>
                         <li><a href="#" data-category=".ct-webdesign">Web design</a></li>
