--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                                 <!--Right Menu-->
                                <ul>
                                     <li><a href="page-about-extended.html">Haberler</a></li>
-                                    <li class="dropdown"><a href="#">Kariyermehmet25</a></li>
-                                    <li class="dropdown"><a href="#">İletişim</a></li>
+                                    <li class="dropdown"><a href="#">Kariyer</a></li>
+                                    <li class="dropdown"><a href="./page-contact-classic.html">İletişim</a></li>
                                 </ul>
                             </nav>
                         </div>
