--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                 </ul>
                                 <!--Right Menu-->
                                <ul>
-                                    <li><a href="page-about-extended.html">Haberler</a></li>
+                                    <li><a href="./home-magazine-v2.html">Haberler</a></li>
                                     <li class="dropdown"><a href="#">Kariyer</a></li>
                                     <li class="dropdown"><a href="./page-contact-classic.html">İletişim</a></li>
                                 </ul>
