--- a/index.html
+++ b/index.html
@@ -185,15 +185,9 @@
                                 </ul>
                                 <!--Right Menu-->
                                <ul>
-                                    <li><a href="./home-magazine-v2.html">Haberler</a></li>
-                                    <li class="dropdown"><a href="#">Kariyer</a></li>
-<<<<<<< HEAD
-                                    <li class="dropdown"><a href="./page-contact-classic.html">İletişim</a></li>
-=======
-
-                                    <li class="dropdown"><a href="./page-contact-classic.html">İletişim</a></li>
-                                    <li class="dropdown"><a href="#">İletişim</a></li>
->>>>>>> 5c0ad9a6f79189bf7ca9733ef68a4298150e4486
+                                    <li><a href="home-magazine-v2.html">Haberler</a></li>
+                                    <li><a href="shortcode-calltoaction.html">Kariyer</a></li>
+                                    <li><a href="page-contact-classic.html">İletişim</a></li>
                                 </ul>
                             </nav>
                         </div>
